<resources>
    <string name="app_name">CNC_Calc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="developer">Developer</string>
    <string name="autor">#Pedro Henrique</string>
    <string name="title_activity_parametros">Parametros</string>
    <string name="btn_parametros">Parametros</string>
    <string name="btn_tabela">Tabela de Rosca</string>
    <string name="title_activity_tabela_rosca">Tabela Rosca (Barra)</string>
    <string name="fina">Fina</string>
    <string name="tabela_rosca">Tabela de Rosca</string>
    <string name="btn_barra">BARRA</string>
    <string name="btn_furo">FURO</string>
    <string name="tv_tamanho">Tamanho [M]</string>
    <string name="tv_fina">Fina</string>
    <string name="tv_frossa">Grossa</string>
    <string name="tv_passo">Passo</string>
    <string name="tv_broca">Ø externo</string>
    <string name="tv_metrica">Métrica</string>
    <string name="tv_whithworth">Whithworth</string>
</resources>
