<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@android:color/darker_gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_parametros"
            android:id="@+id/btn_param"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:gravity="top"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:singleLine="false"
            android:background="@drawable/botao_parametros2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:id="@+id/linearLayout8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/tabela_rosca"
            android:id="@+id/textView8"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:autoText="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout11">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/btn_barra"
            android:id="@+id/btn_barra"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:background="@android:color/holo_red_light" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/btn_furo"
            android:id="@+id/btn_furo"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:background="@android:color/holo_blue_dark" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentLeft="false"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:id="@+id/developer"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="3dp"
            android:textColor="#ff000000"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="3dp"
            android:textColor="#ff4a57ff"
            android:typeface="sans" />

    </LinearLayout>

</RelativeLayout>
